Fix wrap issues at smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body{
 
 /* hover buttons */
 .hover-buttons {
+    white-space: nowrap;
     position: absolute;
     top: 80%;
     left: 50%;
